processed/jira/txt/LU/LU-19433.txt
Key:        LU-19433
Summary:    build failure in obd_uuid2str()
Link:       https://jira.whamcloud.com/browse/LU-19433
Type:       Bug
Priority:   Trivial
Status:     Closed
Resolution: Duplicate
Assignee:   WC Triage
Reporter:   Alex Zhuravlev
Created:    Fri, 26 Sep 2025 04:33:01 +0000
Updated:    Fri, 26 Sep 2025 13:47:54 +0000
Resolved:   Fri, 26 Sep 2025 13:47:54 +0000

--- Description ---
In file included from /home/alexey/head3/lustre/include/uapi/linux/lustre/lustre_idl.h:54,
                 from /home/alexey/head3/lustre/include/lprocfs_status.h:30,
                 from /home/alexey/head3/lustre/include/obd_support.h:27,
                 from /home/alexey/head3/lustre/include/obd_class.h:20,
                 from /home/alexey/head3/lustre/lov/lov_dev.c:21:
In function 'obd_uuid2str',
    inlined from 'lov_add_mdc_target' at /home/alexey/head3/lustre/lov/lov_dev.c:489:4,
    inlined from 'lov_process_config' at /home/alexey/head3/lustre/lov/lov_dev.c:577:8:
/home/alexey/head3/lustre/include/uapi/linux/lustre/lustre_user.h:1416:13: error: 'strnlen' specified bound 40 exceeds source size 0 [-Werror=stringop-overread]
 1416 |         if (strnlen(uuid->uuid, sizeof(uuid->uuid)) >= sizeof(uuid->uuid)) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

--- Comment (bzzz, Fri, 26 Sep 2025 13:47:54 +0000) ---
a dup of LU-18994

--- Comment (gerrit, Fri, 26 Sep 2025 04:39:47 +0000) ---
"Alex Zhuravlev " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/61581

Subject: LU-19433 utils: build issue in obd_uuid2str()

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 318b98d4be5743400bf2129bd4a9f8bc32ea88f6
